--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_auth: ^4.13.0
+  firebase_auth: ^4.14.1
   email_validator: ^2.1.17
+  gap: ^3.0.1
 
 dev_dependencies:
   flutter_test:
