--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: ge_package
-description: A new Flutter project.
-version: 0.0.1
+description: "Provides login and background for GE program suite"
+version: 0.0.2
 
 environment:
   sdk: '>=3.1.5 <4.0.0'
@@ -16,6 +16,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
 
 flutter:
